@@ -1,5 +1,9 @@
 $Id$
 
+-- 2008-04-24 version drupal-6-x-1-2.1
+* Added missing img_assist_fckeditor.js that should hav been included two days ago
+* Updated README information
+
 -- 2008-04-22 version drupal-6-x-1-2.1
 * FCKeditor is now compatible with Image Assist module (http://drupal.org/project/img_assist)
 
